# terminals

./: .gitignore  INITIAL_DESIGN.md  LICENSE  README.md  pyproject.toml
terminals/: __init__.py  cli.py
tests/: test_cli.py
